--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
+        "plugin:react/recommended",
         "airbnb"
     ],
     "overrides": [
@@ -19,7 +19,8 @@
     "rules": {
       "react/jsx-filename-extension": [1, {
         "extensions": [".js", ".jsx"]
-      }]
-      
+      }],
+      "react/react-in-jsx-scope": "off"
+
     }
 }
